[package]
name = "typeshare"
version = "0.0.4"
authors = [
    "Andrew Beyer <beyer@1password.com>",
    "Roustem <roustem@1password.com>"
]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/1Password/typeshare"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
proc-macro2 = "0.4.30"
quote = "0.6.13"
syn = { version = "0.15.42", features = ["full", "visit", "printing", "extra-traits"] }

