[package]
name = "typeshare"
version = "0.0.6"
authors = [
    "Andrew Beyer <beyer@1password.com>",
    "Roustem <roustem@1password.com>"
]
edition = "2018"
description = "Generate code in different languages from Rust type definitions for FFI interop"
license = "MIT"
repository = "https://github.com/1Password/typeshare"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "typeshare"
path = "src/lib.rs"

[[bin]]
name = "typeshare"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
proc-macro2 = "0.4.30"
quote = "0.6.13"
syn = { version = "0.15.42", features = ["full", "visit", "printing", "extra-traits"] }
Inflector = "0.11.4"

[dev-dependencies]
text-diff = "0.4.0"
